<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="umeng_sharebutton_custom">自定义分享按钮</string>
    <string name="app_name">爱学派</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_center">CenterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="edit_digits">0123456789abcdef.-ghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ~!@#$%^*()[]:"'?/\,</string>
    <string name="psd_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="psd_digitss">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-/\()~</string>
    <string name="edit_digit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="edit_money">$0123456789.</string>
    <string name="password_phone">手&#160;&#160;机&#160;&#160;号:</string>
    <string name="password_code">验&#160;&#160;证&#160;&#160;码:</string>
    <string name="password_pwd">新&#160;&#160;密&#160;&#160;码:</string>
    <string name="edit_digit_auth">0123456789xX</string>
    <string name="title_activity_wait_taking">WaitTakingActivity</string>
    <string name="title_activity_distribution">DistributionActivity</string>
    <string name="title_activity_signed">SignedActivity</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_forget_password_activity">ForgetPasswordActivityActivity</string>
    <string name="title_activity_school_data">SchoolDataActivity</string>
    <string name="title_activity_certification">CertificationActivity</string>
    <string name="title_activity_auth_success">AuthSuccessActivity</string>
    <string name="title_activity_select_school">SelectSchoolActivity</string>
    <string name="title_activity_school_address">SchoolAddressActivity</string>
    <string name="title_activity_dormitory_address">DormitoryAddressActivity</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">上拉加载更多</string>
    <string name="refresh_footer_more">查看更多</string>
    <string name="refresh_header_pull">下拉刷新</string>
    <string name="refresh_header_date">上次更新时间：</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="title_activity_cut_picture">CutPictureActivity</string>
    <string name="title_activity_update_user_pwd">UpdateUserPwdActivity</string>
    <string name="title_activity_sms_chat">SmsChatActivity</string>
    <string name="title_activity_distribute_order_detail">DistributeOrderDetailActivity</string>
    <string name="title_activity_signed_order_detail">SignedOrderDetailActivity</string>
    <string name="billcode">运&#160;&#160;单&#160;&#160;号:</string>
    <string name="orderId">订&#160;&#160;单&#160;&#160;号:</string>
    <string name="takerId">接&#160;&#160;单&#160;&#160;号:</string>
    <string name="orderid">订&#160;&#160;单&#160;&#160;号:</string>
    <string name="stack_no">货&#160;&#160;位&#160;&#160;号:</string>
    <string name="get_no">取&#160;&#160;件&#160;&#160;码:</string>
    <string name="rec_fee">需&#160;&#160;收&#160;&#160;款:</string>
    <string name="delivery_man">派&#160;&#160;件&#160;&#160;员:</string>
    <string name="order_status">状&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;态:</string>
    <string name="order_type">类&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型:</string>
    <string name="reason">原&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;因:</string>
    <string name="name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:</string>
    <string name="delivery_address">用户地址:</string>
    <string name="delivery_time">服务时间:</string>
    <string name="app_time">申请时间:</string>
    <string name="delivery_message">服务内容:</string>
    <string name="server_message">服务内容:</string>
    <string name="express_name">快递公司:</string>
    <string name="store_name">商户名称:</string>
    <string name="get_address">取件地址:</string>
    <string name="user_address">用户地址:</string>
    <string name="store_address">商户地址:</string>
    <string name="get_time">取件时间:</string>
    <string name="get_ordet_time">接单时间:</string>
    <string name="sign_time">签收时间:</string>
    <string name="receive_fee">收入金额:</string>
    <string name="remark">(派送要求:%1$s)</string>
    <string name="phone">电&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;话:</string>
    <string name="address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址:</string>
    <string name="stack">货&#160;&#160;位&#160;&#160;号:</string>
    <string name="phone_num">手&#160;&#160;机&#160;&#160;号:</string>
    <string name="trans_sure_tips">正在邀请%1$s %2$s帮忙处理订单</string>
    <string name="wait_take">待处理(%1$s)</string>
    <string name="distribution">进行中(%1$s)</string>
    <string name="signed">已完成(%1$s)</string>
    <string name="abnormal">异常件(%1$s)</string>
    <string name="hurdle_take">待取件(%1$s)</string>
    <string name="sent_item_in">寄件中(%1$s)</string>
    <string name="finish">已完成(%1$s)</string>
    <string name="bounce">退件(%1$s)</string>
    <string name="sure_get">取件(%1$s)</string>
    <string name="sure_trans">转单(%1$s)</string>
    <string name="make_qrcode">生成二维码(%1$s)</string>
    <string name="get_message">服务内容:%1$s</string>
    <string name="remark_title">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注:</string>
    <string name="fee">¥%1$s</string>
    <string name="call_count">(%1$s)</string>
    <string name="trans_tips">您确认把用户为%1$s的用户订单转给小派%1$s么？</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_sidned_detail">SidnedDetailActivity</string>
    <string name="title_activity_swipe_menu_list_demo">SwipeMenuListDemoActivity</string>
    <string name="title_activity_grab_order_detail">GrabOrderDetailActivity</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="task_rule_title">(%1$s按甲方的思考了房间%1$s)</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_base_detail">BaseDetailActivity</string>
    <string name="title_activity_select_city">SelectCityActivity</string>
    <string name="title_activity_signed_query">SignedQueryActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">&#160;&#160;&#160;&#160;&#160;&#160;爱学派是一家专注为高校大学生提供“最后一百米”物流配送服务的公司。现已与多家高校达成合作，通过在校内建设标准化门店，并实行规范化管理，为大学生提供最优质的物流服务，并打造美好的校内物流环境。</string>
    <string name="title_activity_get_goods">GetGoodsActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_message_list">MessageListActivity</string>
    <string name="title_activity_abnormal">AbnormalActivity</string>
    <string name="title_activity_abnormal_detail">AbnormalDetailActivity</string>
    <string name="title_activity_edit_remark">EditRemarkActivity</string>
    <string name="title_activity_abnormal_deal">AbnormalDealActivity</string>
    <string name="title_activity_trans_bill">TransBillActivity</string>
    <string name="title_activity_zoom_image">ZoomImageActivity</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">点击加载更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_swipe_demo">SwipeDemoActivity</string>
    <string name="title_activity_order_menu">OrderMenuActivity</string>
    <string name="title_activity_post_order_menu">PostOrderMenuActivity</string>
    <string name="title_activity_search_waiting">SearchWaitingActivity</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_under_way">UnderWayActivity</string>
    <string name="title_activity_audit">AuditActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_task_cancel">TaskCancelActivity</string>
    <string name="title_activity_task_detail">TaskDetailActivity</string>
    <string name="title_activity_billboard">BillboardActivity</string>
    <string name="title_activity_task_album">TaskAlbumActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_task_describe">TaskDescribeActivity</string>
    <string name="title_activity_filter_order">FilterOrderActivity</string>
    <string name="title_activity_express_list">ExpressListActivity</string>
    <string name="title_activity_back_reason">BackReasonActivity</string>
    <string name="crop__saving">照片保存中</string>
    <string name="crop__wait1">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__done">DONE</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="action_select">action_select</string>
    <string name="title_activity_order_menu_pager">OrderMenuPagerActivity</string>
    <string name="title_activity_task_menu_pager">TaskMenuPagerActivity</string>
    <string name="title_activity_task_menu">TaskMenuActivity</string>
    <string name="title_activity_task_menu_fisrt">TaskMenuFisrt</string>
    <string name="title_activity_task_order_menu_second">TaskOrderMenuSecond</string>
    <string name="title_activity_share_center_">ShareCenter_Activity</string>
    <string name="title_activity_share_people">SharePeopleActivity</string>
    <string name="title_activity_invite_income">InviteIncomeActivity</string>
    <string name="smoothlistview_header_hint_normal">下拉刷新</string>
    <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
    <string name="smoothlistview_header_hint_loading">正在加载...</string>
    <string name="smoothlistview_header_last_time">上次更新时间：</string>
    <string name="smoothlistview_footer_hint_normal">查看更多</string>
    <string name="smoothlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_active_rule">ActiveRuleActivity</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_server_main">ServerMainActivity</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="title_activity_thought">ThoughtActivity</string>
    <string name="title_activity_thought_complete">ThoughtCompleteActivity</string>
    <string name="title_activity_delivery_remind_detail">DeliveryRemindDetailActivity</string>
    <string name="title_activity_task_order">TaskOrderActivity</string>
    <string name="title_activity_complete_information">CompleteInformationActivity</string>
</resources>