<?xml version="1.0" encoding="utf-8"?>
<com.zhiduan.crowdclient.swipeview.TouchLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:clickable="false"
    android:padding="10dp" >

    <TextView
        android:id="@+id/loadFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/load_full"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/no_data"
        android:visibility="gone" />

    <TextView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/more" />

    <ProgressBar
        android:id="@+id/loading"
         android:layout_width="20dp"
         android:layout_height="20dp"
        style="?android:attr/progressBarStyleSmall" />

</com.zhiduan.crowdclient.swipeview.TouchLayout>